--- a/horarios de atencion.html
+++ b/horarios de atencion.html
@@ -6,7 +6,14 @@
     <title>horarios de atencion</title>
 </head>
 <body>
-    
+    <header>
+        <ul>
+            <a href="../index.html"><li> Inicio </li></a>
+            <a href="./horarios de atencion/horarios de atencion.html"><li>Horarios de atencion </li></a>
+            <a href=""><li>Conocenos</li></a>
+            <a href=""><li>Contacto</li></a>
+        </ul>
+    </header>
     <table border="1">
     <u><h1>Horarios de atencion</h1></u>
     <tr>
@@ -32,5 +39,10 @@
     </ul>
     </tr>
     </table>
+
+    <footer> <p>Todos los derechos reservados para la pagina de Belen Rolon </p>
+        <a href="instagram.com">Instagram</a> <br>
+        <a href="facebook.com">Facebook</a>
+    </footer>
 </body>
 </html>
