--- a/formulario de contacto.html
+++ b/formulario de contacto.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
+    <link rel="stylesheet" href="./css/Style.css">
 </head>
 <body>
     <header>
+        <nav>
         <ul>
             <a href="./index.html"><li> Inicio </li></a>
             <a href="./horarios de atencion/horarios de atencion.html"><li>Horarios de atencion </li></a>
-            <a href=""><li>Conocenos</li></a>
+            <a href="Conocenos.html"><li>Conocenos</li></a>
             <a href=""><li>Contacto</li></a>
         </ul>
+        <img src="" alt="Logo de la empresa">
+        </nav>
     </header>
     
-    <form action="formulario de contacto.html" method="get">
+    <form action="formulario de contacto.html" method="get" class="claseformulario">
     <h4>Nombre</h4>
     <input type="text" name="Nombre" placeholder="Nombre">
     <h4>Apellido</h4>
@@ -23,8 +27,8 @@
     <h4>Edad</h4>
     <input type="number" name="Edad" placeholder="Edad">
     <h4> Indique Sexo</h4>
-    Femenino<input type="radio" name="sexo">
-    Masculino <input type="radio" name="sexo">
+    <h5>Femenino<input type="radio" name="sexo"></h5>
+    <h5>Masculino <input type="radio" name="sexo"></h5>
     <h4>Gmail</h4>
     <input type="email" name="Gmail" placeholder="Gmail">
     <br>
