--- a/horarios de atencion.html
+++ b/horarios de atencion.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>horarios de atencion</title>
+    <link rel="stylesheet" href="./css/Style.css">
 </head>
 <body>
     <header>
+        <nav>
         <ul>
-            <a href="../index.html"><li> Inicio </li></a>
+            <a href="Index.html"><li> Inicio </li></a>
             <a href="./horarios de atencion/horarios de atencion.html"><li>Horarios de atencion </li></a>
-            <a href=""><li>Conocenos</li></a>
+            <a href="Conocenos.html"><li>Conocenos</li></a>
             <a href=""><li>Contacto</li></a>
         </ul>
+        <img src="" alt="Logo de la empresa">
+        </nav>
     </header>
     <table border="1">
     <u><h1>Horarios de atencion</h1></u>
-    <tr>
+    <tr class="diasEnNegrita">
     <ul>
         <td>Lunes</td>
         <td>Martes</td>
@@ -27,7 +31,7 @@
         <td>Domingo</td>
     </ul>
     </tr>
-    <tr>
+    <tr class="horariosCursiva">
     <ul>
         <td>9:00 a 18:00</td>
         <td>9:00 a 18:00</td>
